--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,8 +14,19 @@ body {
   min-height: 100%;
 }
 /* HEADINGS DEFAULT */
-h1, h2, h3, h4, h5, h6 { color: #444; font-family: 'Open Sans', cursive; }
-a { text-decoration: none; }
+h1{
+color:#00FFFF;
+}
+#letitreduroman{
+color:#00FFFF;
+font-size:2.5em;
+}
+
+h2, h3, h4, h5, h6 { color: #444; font-family: 'Open Sans', cursive; }
+a { 
+text-decoration: none; 
+color: #000;
+}
 ul, ol { margin-left: 40px; }
 hr { margin: 10px 0px; opacity: .25; }
 
@@ -24,7 +35,7 @@ form h2 {
 	margin: 25px auto;
 	text-align: center;
 }
-form input {
+form input select {
 	width: 100%;
 	display: block;
 	padding: 13px 13px;
@@ -39,16 +50,16 @@ form input:focus {
 	outline: none;
 }
 /* BUTTON DEFAULT */
-.btn {
-	color: white;
-	background: #006384;
+button {
+	color: #000;
+	background-color: #e7e7e7;
 	text-align: center;
 	border: none;
 	border-radius: 5px;
 	display: block;
 	letter-spacing: .1em;
 	margin: 10px 0px;
-	padding: 13px 20px;
+	padding: 5px 10px;
 	text-decoration: none;
 }
 
@@ -62,75 +73,158 @@ form input:focus {
 
 .topbanner {
     color: white;
-    background: #73707D;
+    background: #17202A;
     text-align: right;
     border: none;
     font-size: 10px;
-    padding-right: 10%;
-    margin: 10px auto 0px;
-    width: 70%;
+    padding-right:0;
+    position: sticky;
+    top: 0;
 }
 
 .topbanner a {
     color: white;
-
 }
+
 .container {
 	width: 80%;
 	margin: 0px auto;
 }
-/* NAVBAR */
-.menu {
-	margin: 0 auto;
-    overflow: hidden;
-	background-color: #3E606F;
-    border-radius: 0px 0px 6px 6px;
+
+/****************************NAVBAR*********************************/
+
+/* header */
+
+.header {
+  background-color: #3E606F;
+  box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
+  position: fixed;
+  border-radius: 0px 0px 6px 6px;
+  z-index: 3;
+  width: 100%;
 }
-.menu ul {
-    list-style-type: none;
-    float: right;
+
+.header ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  overflow: hidden;
+  background-color: #3E606F;
+  
 }
-.menu ul li {
-    float: left;
+
+.header li a {
+  display: block;
+  padding: 20px 20px;
+  text-decoration: none;
+  color: white;
 }
-.menu ul li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 20px 28px;
-    text-decoration: none;
-}
-.menu ul li a:hover {
+
+.header li a:hover,
+.header .menu-btn:hover {
 	color: #B9E6F2;
     background-color: #334F5C;
 }
 
-/* LOGO */
-.menu .logo_div {
-	float: left; 
-	padding-top: 5px;
-	padding-left: 40px;
+.header .logo {
+  display: block;
+  float: left;
+  font-size: 1em;
+  text-decoration: none;
+  color: #00FFFF;
+  padding-left: 2%;
 }
-.menu .logo_div h1 {
-	color: #B9E6F2;
-	font-size: 1.5em;
-	letter-spacing: 5px;
-	font-weight: 100;
+#fonction-jf {
+    color: white;
 }
+
+
+/* menu */
+
+.header .menu {
+  clear: both;
+  max-height: 0;
+  transition: max-height .2s ease-out;
+}
+
+/* menu icon */
+
+.header .menu-icon {
+  cursor: pointer;
+  display: inline-block;
+  float: right;
+  padding: 28px 20px;
+  position: relative;
+  user-select: none;
+}
+
+.header .menu-icon .navicon {
+  background: #333;
+  display: block;
+  height: 2px;
+  position: relative;
+  transition: background .2s ease-out;
+  width: 18px;
+}
+
+.header .menu-icon .navicon:before,
+.header .menu-icon .navicon:after {
+  background: #333;
+  content: '';
+  display: block;
+  height: 100%;
+  position: absolute;
+  transition: all .2s ease-out;
+  width: 100%;
+}
+
+.header .menu-icon .navicon:before {
+  top: 5px;
+}
+
+.header .menu-icon .navicon:after {
+  top: -5px;
+}
+
+
+/* menu btn */
+
+.header .menu-btn {
+  display: none;
+}
+
+.header .menu-btn:checked ~ .menu {
+  max-height: 240px;
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon {
+  background: transparent;
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon:before {
+  transform: rotate(-45deg);
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon:after {
+  transform: rotate(45deg);
+}
+
+.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+  top: 0;
+}
+
 
 /* FOOTER */
-.footer {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  color: white;
-  background-color: #73707D;
-  text-align: center;
-  width: 80%;
-  margin: 10px auto 0px;
+.footer{
+	color: white;
+    background: #73707D;
+    text-align: center;
+    border: none;
+    font-size: 10px;
+    padding-right: 10%;
+    padding-bottom: 2px;
 }
-
 /* BANNER: Welcome message; */
 .banner {
 	margin: 5px auto;
@@ -141,10 +235,9 @@ form input:focus {
 	background-size: 100% 100%;
 }
 .banner .welcome_msg {
-	width: 45%;
-	float: left;
-	padding: 20px;
-	margin-top: 5%;
+    display: flex;
+    justify-content: space-between;
+    padding-top:23%;
 }
 .banner .welcome_msg h1 {
 	color: #00FFFF;
@@ -156,6 +249,10 @@ form input:focus {
 	font-size: 1.5em;
 	line-height: 1.8em;
 
+}
+.welcome-txt{
+	padding-top: 25px;
+    padding-left: 2%;
 }
 .banner .welcome_msg p span {
 	font-size: .81em; 
@@ -345,10 +442,15 @@ form input:focus {
 	text-align: center;
 }
 .error {
-	color: #a94442; 
-	background: #f2dede; 
+	color: #ffffff; 
+	background: #3E606F; 
 	border: 1px solid #a94442; 
 	margin-bottom: 20px;
+    border-radius: 0% 0% 20% 20%;
+    text-align: center;
+}
+#notfound{
+	color: yellow;
 }
 .validation_errors p {
 	text-align: left;
@@ -362,4 +464,85 @@ form input:focus {
 .createdate{
     font-size: 11px;
     color: grey;
+}
+.post-content{
+	column-count: 2;
+}
+/***********MEDIA QUERIES*******/
+@media (min-width: 768px) {
+    .header li {
+      float: left;
+    }
+    .header li a {
+      padding: 20px 30px;
+    }
+    .header .menu {
+      clear: none;
+      float: right;
+      max-height: none;
+    }
+    .header .menu-icon {
+      display: none;
+    }
+    .header {
+    width: 80%;
+	}
+}
+
+#ajoutbillet{
+	float:right;
+}
+
+
+/****TEST******/
+
+
+@media screen and (max-width: 768px){
+	
+	
+}
+
+@media screen and (max-width: 425px){
+	
+	
+}
+
+@media screen and (max-width: 375px){
+	
+
+}
+@media screen and (max-width: 320px) {
+	
+ 	h2, h3{
+    padding-left: 5%;
+	}
+    .container {
+    width: 100%;
+    padding-left:0;
+    padding-right: 0;
+	}
+    .topbanner {
+    padding-right:0;
+    width: 100%;
+	}
+    #letitreduroman{
+    font-size:1.5em;
+    font-weight: bold;
+    }
+    .banner .welcome_msg {
+    display: block;
+    padding-left: 2%;
+    padding-right: 2%;
+	}
+    .welcome-img{
+    padding-left: 30%;
+    }
+    .post-content {
+    column-count: 1;
+	padding-left: 6%;
+    width: 88%;
+	}
+    #ajoutbillet {
+    float: left;
+	} 
 }
